--- a/src/frontend/i18n/locales/en.json
+++ b/src/frontend/i18n/locales/en.json
@@ -18,6 +18,14 @@
       "light": "Light",
       "dark": "Dark",
       "system": "System"
+    },
+    "sections": {
+      "general": "General",
+      "commercial": "Commercial",
+      "relations": "Relations",
+      "additional_notes": "Additional Notes",
+      "customer_notes": "Customer Notes",
+      "notes": "Notes"
     }
   },
   "dashboard": {
@@ -131,6 +139,7 @@
       "required_fields": "Please complete the required fields"
     },
     "messages": {
+      "not_found": "Company not found",
       "unknown_error": "Unknown error",
       "loading": "Loading company...",
       "error_loading": "Error loading company: {error}",
@@ -388,6 +397,7 @@
       "pricing": "Pricing",
       "dimensions_and_weight": "Dimensions & Weight",
       "weight_and_stock": "Weight & Stock",
+      "urls": "URLs",
       "stock_section": "Stock & Inventory",
       "bom_section": "List of Articles",
       "bom_placeholder": "Nomenclature articles...",
@@ -427,8 +437,6 @@
       "plan_url": "Plan URL",
       "designations": "Designations",
       "additional_designations": "Additional designations",
-      "dimensions_section": "Dimensions & Weight",
-      "logistics_section": "Logistics & Customs",
       "is_active": "Active",
       "loading": "Loading form...",
       "saving": "Saving...",
@@ -453,62 +461,6 @@
     "margin_percentage": "Margin %",
     "stock_location": "Location",
     "total_cost": "Total Cost"
-  },
-  "products": {
-    "title": "Products",
-    "description": "Product and nomenclature management",
-    "list_title": "Product List",
-    "create": "Create Product",
-    "create_new": "New Product",
-    "edit": "Edit Product",
-    "delete": "Delete Product",
-    "view": "View Product",
-    "no_products": "No products registered",
-    "no_products_message": "Start by creating your first product",
-    "create_first": "Create First Product",
-    "search_placeholder": "Search products by code, name...",
-    "bom": "Bill of Materials (BOM)",
-    "add_component": "Add Component",
-    "columns": {
-      "id": "ID",
-      "code": "Code",
-      "name": "Name",
-      "type": "Type",
-      "unit": "Unit",
-      "cost": "Cost",
-      "description": "Description",
-      "status": "Status",
-      "created_at": "Created At",
-      "actions": "Actions"
-    },
-    "types": {
-      "article": "Article",
-      "nomenclature": "Nomenclature"
-    },
-    "filters": {
-      "all": "All",
-      "active": "Active",
-      "inactive": "Inactive",
-      "article": "Articles",
-      "nomenclature": "Nomenclatures",
-      "status": "Status",
-      "type": "Type"
-    },
-    "form": {
-      "basic_info": "Basic Information",
-      "bom_info": "Bill of Materials",
-      "code": "Code",
-      "code_hint": "Unique product code",
-      "name": "Name",
-      "name_hint": "Descriptive name",
-      "description": "Description",
-      "description_hint": "Detailed description",
-      "type": "Product Type",
-      "unit": "Unit of Measure",
-      "cost": "Cost",
-      "cost_hint": "0.00",
-      "is_active": "Active"
-    }
   },
   "quotes": {
     "title": "Quotes",
@@ -566,6 +518,8 @@
       "no_plant": "No Plant",
       "edit_title": "Edit Quote",
       "create_title": "Create Quote",
+      "customer_notes": "Customer Notes",
+      "notes": "Notes",
       "generate_fake_data": "Generate fake data",
       "fake_data_success": "Fake data generated successfully",
       "fake_data_error": "Failed to generate fake data: {error}"
@@ -573,8 +527,11 @@
     "sections": {
       "general_info": "General Information",
       "commercial_details": "Commercial Details",
+      "financial_details": "Financial Details",
       "relations": "Relations",
       "additional_notes": "Additional Notes",
+      "customer_notes": "Customer Notes",
+      "notes": "Notes",
       "products": "Products"
     },
     "messages": {
@@ -641,18 +598,22 @@
     "edit": "Edit",
     "view": "View",
     "create": "Create",
+    "add": "Add",
+    "remove": "Remove",
     "search": "Search",
     "clear": "Clear",
     "search_history": "Search History",
     "filter": "Filter",
     "filters": "Filters",
     "collapse": "Collapse",
+    "clear_history": "Clear History",
     "clear_filters": "Clear Filters",
     "apply_filters": "Apply Filters",
     "export": "Export",
     "import": "Import",
     "print": "Print",
     "refresh": "Refresh",
+    "retry": "Retry",
     "back": "Back",
     "next": "Next",
     "previous": "Previous",
@@ -684,10 +645,18 @@
     "invalid_url": "Invalid URL",
     "min_length": "Minimum {min} characters",
     "max_length": "Maximum {max} characters",
-    "confirm_delete": "Are you sure you want to delete this record?",
-    "confirm_delete_message": "This action cannot be undone",
     "operation_successful": "Operation completed successfully",
-    "operation_failed": "Operation failed"
+    "operation_failed": "Operation failed",
+    "page": "Page",
+    "of": "of",
+    "expand": "Expand",
+    "from": "From",
+    "to": "To",
+    "id": "ID",
+    "name": "Name",
+    "category": "Category",
+    "active_only": "Active only",
+    "date_range": "Date Range"
   },
   "theme": {
     "light": "Light",
@@ -706,7 +675,6 @@
     "suppliers": "Suppliers",
     "articles": "Articles",
     "nomenclatures": "Nomenclatures",
-    "products": "Products",
     "quotes": "Quotes",
     "orders": "Orders",
     "deliveries": "Deliveries",
@@ -718,15 +686,20 @@
     "view": "View"
   },
   "validation": {
-    "required": "This field is required",
+    "required": "The field {field} is required",
     "email": "Enter a valid email",
+    "email_invalid": "Invalid email",
     "phone": "Enter a valid phone",
+    "phone_invalid": "Invalid phone",
     "url": "Enter a valid URL",
+    "url_invalid": "Invalid URL",
     "min_length": "Minimum {min} characters",
     "max_length": "Maximum {max} characters",
     "number": "Must be a number",
     "positive": "Must be a positive number",
-    "integer": "Must be an integer"
+    "integer": "Must be an integer",
+    "date_too_early": "The date is too early",
+    "date_too_late": "The date is too late"
   },
   "errors": {
     "network_error": "Server connection error",
