feat(i18n): add work order fields translations for en and es locales
Add new translation fields for work order management including edit action and various order-related fields

--- a/src/frontend/i18n/locales/en.json
+++ b/src/frontend/i18n/locales/en.json
@@ -559,7 +559,14 @@
     "description": "Work order management",
     "list_title": "Order List",
     "create": "Create Order",
-    "view": "View Order"
+    "edit": "Edit Order",
+    "view": "View Order",
+    "fields": {
+      "revision": "Revision",
+      "order_number": "Order Number",
+      "customer_po": "Customer PO (OC)",
+      "project_number": "Project Number"
+    }
   },
   "deliveries": {
     "title": "Deliveries",
