``` feat(i18n): add order form translations for en and es locales
Add new translation fields for order form including edit/create titles, fake data generation button, and success/error messages for fake data generation functionality.
```

--- a/src/frontend/i18n/locales/en.json
+++ b/src/frontend/i18n/locales/en.json
@@ -566,6 +566,13 @@
       "order_number": "Order Number",
       "customer_po": "Customer PO (OC)",
       "project_number": "Project Number"
+    },
+    "form": {
+      "edit_title": "Edit Order",
+      "create_title": "Create Order",
+      "generate_fake_data": "Generate fake data",
+      "fake_data_success": "Fake data generated successfully",
+      "fake_data_error": "Failed to generate fake data: {error}"
     }
   },
   "deliveries": {
