feat(i18n): add spanish translation for add products action in quotes section
Add "add_products" translation key to quotes section for product addition functionality.

--- a/src/frontend/i18n/locales/es.json
+++ b/src/frontend/i18n/locales/es.json
@@ -474,6 +474,7 @@
     "delete": "Eliminar Cotización",
     "view": "Ver Cotización",
     "detail": "Detalles de la Cotización",
+    "add_products": "Agregar Productos",
     "no_quotes": "No hay cotizaciones registradas",
     "no_quotes_message": "No hay cotizaciones registradas para {company_name}. Comienza creando la primera.",
     "create_first": "Crear Primera Cotización",
