feat(i18n): add 'no_notes' key to Spanish and English translations for improved user feedback

--- a/src/frontend/i18n/locales/en.json
+++ b/src/frontend/i18n/locales/en.json
@@ -532,7 +532,8 @@
       "additional_notes": "Additional Notes",
       "customer_notes": "Customer Notes",
       "notes": "Notes",
-      "products": "Products"
+      "products": "Products",
+      "no_notes": "No notes"
     },
     "messages": {
       "created": "Quote created successfully",
