--- a/src/frontend/i18n/locales/es.json
+++ b/src/frontend/i18n/locales/es.json
@@ -533,7 +533,8 @@
       "additional_notes": "Notas Adicionales",
       "customer_notes": "Notas del Cliente",
       "notes": "Notas",
-      "products": "Productos"
+      "products": "Productos",
+      "no_notes": "Sin notas"
     },
     "messages": {
       "created": "Cotización creada exitosamente",
