docs(i18n): add missing Spanish translation for "add_articles" key
Add the Spanish translation for the "add_articles" key in the BOM (Bill of Materials) section to ensure the UI is fully localized.

--- a/src/frontend/i18n/locales/es.json
+++ b/src/frontend/i18n/locales/es.json
@@ -362,6 +362,7 @@
     "search_placeholder": "Buscar nomenclaturas por código, nombre...",
     "bom": "Lista de Artículos",
     "add_component": "Agregar Componente",
+    "add_articles": "Agregar Artículos",
     "columns": {
       "id": "ID",
       "code": "Código",
